--- a/tool/index.html
+++ b/tool/index.html
@@ -41,7 +41,7 @@ table {
 	/* float: right ; */
 
 
-  width: 30%;
+  /* width: 30%; */
   /* height: 15%; */
   margin: auto;
 	/* margin-top: 9% */
