--- a/tool/index.html
+++ b/tool/index.html
@@ -301,6 +301,27 @@ path:hover {
 },{
 	"material": "Wood",
 	"value":5.322936027
+},{
+	"material": "GlazTA",
+	"value":5.481279
+},{
+	"material": "GlazTT",
+	"value":8.723595
+},{
+	"material": "GlazDA",
+	"value":3.67896
+},{
+	"material": "GlazDT",
+	"value":5.044635
+},{
+	"material": "Mull",
+	"value":17.577
+},{
+	"material": "Slab",
+	"value":15
+},{
+	"material": "Struct",
+	"value":26
 }	
 	];
 
@@ -334,6 +355,26 @@ path:hover {
 			}
 			
 			}
+
+			let currentContainer = 'c';
+
+			function ChangetoC(){
+				currentContainer = 'c';
+
+				init();
+			}
+
+			function ChangetoD(){
+				currentContainer = 'd';
+
+				init();
+			}
+
+			function ChangetoE(){
+				currentContainer = 'e';
+
+				init();
+			}
 			
 			
 				</script>
@@ -342,22 +383,17 @@ path:hover {
 
 		<div class="tabs">
 			<input type="radio" name="tabs" id="tabone" checked="checked">
-			<label for="tabone">Option One</label>
+			<label for="tabone">Building Viewer</label>
 			<div class="tab">
 				<canvas id="c"></canvas>	
 			</div>
 			
 			<input type="radio" name="tabs" id="tabtwo">
-			<label for="tabtwo">Option Two</label>
+			<label for="tabtwo">Building Designer</label>
 			<div class="tab">
-				<canvas id="d"></canvas>		
+				<iframe src="https://dev-swarm.herokuapp.com/viewer/5f8c30db783c4a000488cec6" width="100%" height="600px"></iframe>
 			</div>
 			
-			<input type="radio" name="tabs" id="tabthree">
-			<label for="tabthree">Option Three</label>
-			<div class="tab">
-				<canvas id="e"></canvas>	
-			</div>
 		</div>
 		
 
@@ -397,7 +433,14 @@ path:hover {
             <option value="Granite1">RS - Granite</option>
             <option value="Limestone1">RS - Limestone</option>
             <option value="Steel">RS - Steel Panel</option>
-            <option value="Wood">RS - Wood</option>
+						<option value="Wood">RS - Wood</option>
+						<option value="GlazTA">Glass - Triple Pane</option>
+						<option value="GlazTT">Glass - Triple Pane Tempered</option>
+						<option value="GlazDA">Glass - Double Pane</option>
+						<option value="GlazTT">Glass - Double Pane Tempered</option>
+						<option value="Mull">Mullion - Aluminum</option>
+						<option value="Slab">Slab - Concrete 10" 5ksi</option>
+						<option value="Struct">Steel - Structure</option>
 					</select>
 				</td>
 				<td>
@@ -449,25 +492,25 @@ path:hover {
 			let allColors = [];
 			let allLayerAreas = [];
 
+			// let currentContainer = 'c';
+
 			init();
 			animate();
 
 			function init() {
 
-				
-
 				THREE.Object3D.DefaultUp = new THREE.Vector3( 0, 0, 1 );
 				// container = document.createElement( 'div' );
 				// container = document.querySelector('#c');
-				container = document.getElementById( 'c' );
+				container = document.getElementById( currentContainer );
 				// document.body.appendChild( container );
 
 				// renderer = new THREE.WebGLRenderer( { canvas: container, antialias: true } );
 
 				// aspect = canvas.clientWidth / canvas.clientHeight;
 
-				camera = new THREE.PerspectiveCamera( 60, container.clientWidth / container.clientHeight, 1, 1000 );
-				camera.position.set( -28, - 28, 31 );
+				camera = new THREE.PerspectiveCamera( 30, container.clientWidth / container.clientHeight, 1, 1000 );
+				camera.position.set( -280, - 280, 310);
 				
 
 				scene = new THREE.Scene();
@@ -475,30 +518,30 @@ path:hover {
 				scene.background = new THREE.Color( 0xffffff );
 
 				const directionalLight = new THREE.DirectionalLight( 0xffffff );
-				directionalLight.position.set( .2, 1, 2 );
+				directionalLight.position.set( .2, 10, 2 );
 				directionalLight.castShadow = true;
-				directionalLight.intensity = 0.3;
+				directionalLight.intensity = 0.4;
 				scene.add( directionalLight );
 
 				const directionalLight2 = new THREE.DirectionalLight( 0xffffff );
-				directionalLight2.position.set( -1, -.2, 2 );
+				directionalLight2.position.set( -10, -.2, 2 );
 				directionalLight2.castShadow = true;
-				directionalLight2.intensity = 0.2;
+				directionalLight2.intensity = 0.3;
 				scene.add( directionalLight2 );
 
 
-				let hemiLight = new THREE.HemisphereLight( 0xffffff, 0x080808, 0.75 );
+				let hemiLight = new THREE.HemisphereLight( 0xffffff, 0x080808, 1 );
     hemiLight.position.set( 0, 0, 400 );
 		scene.add( hemiLight );
 		
-		scene.add( new THREE.AmbientLight( 0xffffff, 0.125 ) );
+		scene.add( new THREE.AmbientLight( 0xffffff, 0.2 ) );
 
 				// sceneBox = new THREE.Box3();
 
 				const loader = new Rhino3dmLoader();
 				loader.setLibraryPath( 'jsm/libs/rhino3dm/' );
 
-				loader.load( 'models/3dm/Tower4.3dm', function ( object ) {
+				loader.load( 'models/3dm/RhinoTemplate5.3dm', function ( object ) {
 
 					// sceneBox.setFromObject(object);
     // let boxHelper = new THREE.Box3Helper(sceneBox, 0x0000ff);
